terraform/eks.tf
#------------------------------#
#EKS Cluster
#------------------------------#
resource "aws_eks_cluster" "eks" {
  name     = "eks"
  role_arn = aws_iam_role.eks_cluster_role.arn
  version  = "1.32"

  vpc_config {
    subnet_ids = [
      aws_subnet.Public_Subnet_1.id,
      aws_subnet.Public_Subnet_2.id,
      aws_subnet.Private_Subnet_1.id,
      aws_subnet.Private_Subnet_2.id
    ]
    endpoint_private_access = false
    endpoint_public_access  = true
    security_group_ids      = [aws_security_group.eks_cluster_sg.id]
  }
    enabled_cluster_log_types = [
    "api",
    "audit",
    "authenticator",
    "controllerManager",
    "scheduler"
    ]
  depends_on = [
      aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy,
      aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy
  ]
}

#----------------------------------------#
# EKS Cluster Security Group
#----------------------------------------#
resource "aws_security_group" "eks_cluster_sg" {
  name        = "eks-cluster-sg"
  description = "EKS Cluster Security Group"
  vpc_id      = aws_vpc.mainvpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.cidrs]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.cidrs]
  }
  tags = {
    Name = "eks-cluster-sg"
  }
}
#----------------------------------------#
# EKS Cluster IAM Role
#----------------------------------------#

resource "aws_iam_role" "eks_cluster_role" {
  name = "eks-cluster-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"
      Principal = {
        Service = "eks.amazonaws.com"
      }
      Action = "sts:AssumeRole"
    }]
  })
}

#----------------------------------------#
# EKS Cluster IAM Policy Attachments
#----------------------------------------#
resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSClusterPolicy" {
  role       = aws_iam_role.eks_cluster_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
}

resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSServicePolicy" {
  role       = aws_iam_role.eks_cluster_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
}
